<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <Button
            android:id="@+id/item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/item_button_text"/>

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_textView_titlePlaceHolder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLines="1"
            android:layout_toStartOf="@id/item_button"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/item_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_textView_authorPlaceHolder"
            android:layout_below="@id/item_title"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>