<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/itemNoButton_character"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/item_textView_authorPlaceHolder"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/itemNoButton_anime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemNoButton_character"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/item_textView_titlePlaceHolder"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/itemNoButton_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemNoButton_anime"
            android:text="@string/item_textView_quotePlaceHolder"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>