<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/quoteFeed_searchByBar">

        <Button
            android:id="@+id/quoteFeed_button_btnSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign out"
            android:layout_alignParentStart="true"
            android:padding="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/quoteFeed_textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quoteFeed_textView_title_10random"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textAlignment="center"
            android:padding="8dp"
            android:layout_toEndOf="@id/quoteFeed_button_btnSignOut"
            android:layout_marginEnd="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/quoteFeed_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quoteFeed_textView_title"
            android:layout_above="@id/quoteFeed_searchByBar"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/item"/>

        <LinearLayout
            android:id="@+id/quoteFeed_searchByBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="#ede7f6">

            <Button
                android:id="@+id/quoteFeed_button_btnFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userQuoteFavorite_button_viewFavorites"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quoteFeed_textView_Searchby_prompt"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/quoteFeed_button_searchByAnime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quoteFeed_button_byAnime"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/quoteFeed_button_searchByCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quoteFeed_button_byCharacter"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>