<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/quoteFeedByAnime_searchByBar">

        <TextView
            android:id="@+id/quoteFeedByAnime_textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quoteFeedByAnime_textView_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textAlignment="center"
            android:padding="8dp" />

        <Spinner
            android:id="@+id/quoteFeedByAnime_spinner"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quoteFeedByAnime_textView_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/quoteFeedByAnime_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quoteFeedByAnime_spinner"
            android:layout_above="@id/quoteFeedByAnime_searchByBar"
            tools:listitem="@layout/item" />

        <LinearLayout
            android:id="@+id/quoteFeedByAnime_searchByBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quoteFeed_textView_Searchby_prompt"
                android:textSize="30sp"
                android:layout_marginRight="8dp" />

            <Button
                android:id="@+id/quoteFeedByAnime_button_10random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quoteFeedByAnime_button_10random"
                android:layout_marginRight="8dp" />

            <Button
                android:id="@+id/quoteFeedByAnime_button_searchByCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quoteFeed_button_byCharacter" />
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>