<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/quoteFeedByCharacter_searchByBar">

        <Button
            android:id="@+id/quoteFeedByCharacter_button_btnSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign out"
            android:layout_alignParentStart="true"
            android:padding="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/quoteFeedByCharacter_textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/quoteFeedByCharacter_textView_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textAlignment="center"
            android:padding="8dp"
            android:layout_toEndOf="@id/quoteFeedByCharacter_button_btnSignOut"
            android:layout_marginEnd="8dp" />

        <Spinner
            android:id="@+id/quoteFeedByCharacter_spinner"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quoteFeedByCharacter_textView_title"
            android:layout_margin="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/quoteFeedByCharacter_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/quoteFeedByCharacter_searchByBar"
            android:layout_below="@id/quoteFeedByCharacter_spinner"
            tools:listitem="@layout/item" />

        <LinearLayout
            android:id="@+id/quoteFeedByCharacter_searchByBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quoteFeed_textView_Searchby_prompt"
                android:textSize="20sp"
                android:layout_marginRight="8dp" />

            <Button
                android:id="@+id/quoteFeedByCharacter_button_10random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quoteFeedByAnime_button_10random"
                android:layout_marginRight="8dp" />

            <Button
                android:id="@+id/quoteFeedByCharacter_button_searchByAnime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quoteFeed_button_byAnime" />
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>